# lekvc

./: flake.nix
.github/workflows/: release.yml
client/: commands.go  go.mod  go.sum  jitter_buffer.go  linux.go  main.go  miniaudio.go  mixer.go  util.go  win.go
client/preprocessing/: biquad_filter.go  compressor.go  deesser.go  noise_gate.go  noise_suppressor.go  preprocessing.go
client/speex/: preproccess.go
client_cpp/: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
server/: go.mod  main.go
server/protocol/: protocol.go  util.go
